set02/problem03_erroe.txt
 Executing task: C:\MinGW\bin\gcc.exe -Wall -Wextra -g3 c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c -o c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\output\problem03.exe 

c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c: In function 'output':
c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c:42:16: warning: statement with no effect [-Wunused-value]
     else(result==1)
         ~~~~~~~^~~~
c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c:43:5: error: expected ';' before '{' token
     {
     ^
c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c:36:17: warning: unused parameter 'n' [-Wunused-parameter]
 void output(int n, int result)
                 ^

 *  The terminal process "C:\MinGW\bin\gcc.exe '-Wall', '-Wextra', '-g3', 'c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c', '-o', 'c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\output\problem03.exe'" terminated with exit code: 1. 
 *  Terminal will be reused by tasks, press any key to close it. 

 *  Executing task: C:\MinGW\bin\gcc.exe -Wall -Wextra -g3 c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c -o c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\output\problem03.exe 

 *  Terminal will be reused by tasks, press any key to close it. 

 *  Executing task: C:\MinGW\bin\gcc.exe -Wall -Wextra -g3 c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c -o c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\output\problem03.exe 

 *  Terminal will be reused by tasks, press any key to close it. 

 *  Executing task: C:\MinGW\bin\gcc.exe -Wall -Wextra -g3 c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\problem03.c -o c:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set02\output\problem03.exe 

 *  Terminal will be reused by tasks, press any key to close it. 
